typo corrected in equation 3

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ The Rosseland Mean Opacity is defined by Equation \eqref{eq:RMO}.
 
 \[
 \begin{equation}\label{eq:RTE0}
-{d I_\nu \over d s} = -\sigma_nu I_\nu + \int_{4\pi} \sigma_nu(\Omega’ \to \Omega)I_\nu(\Omega’)d\Omega’
+{d I_\nu \over d s} = -\sigma_\nu I_\nu + \int_{4\pi} \sigma_\nu p(\Omega’ \to \Omega)I_\nu(\Omega’)d\Omega’
 \end{equation}
 \]
 
@@ -205,7 +205,7 @@ Hopefully this equation looks less daunting now than it did at first. </p>
 
 <p><b>What struck me</b> about this paper was the analytical sophistication of Poutanen’s result. It appears to be the final word on the computation of both the Rosseland mean opacity and the flux mean opacity in these high-energy regimes. I'm impressed by Poutanen's ability to make his findings legible to a wide audience and to package them into a coherent 8-page bombshell of a paper. </p>
 
-<p>The qualification I put in the title is obviously a bit of a joke at the expense of Poutanen, but it's not very cutting because the result is much more general and generalizable than the joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. I didn't mention this in the review but that absorbption <i>was accounted for!</i>, which makes the result that much more impressive. Finally, the assumption that the scattering agents are isotropically distributed is good because (a) it simplifies the reader's job, and (b) this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate that into the redistribution function and you're done! </p>
+<p>The qualification I put in the title is obviously a bit of a joke at the expense of Poutanen, but it's not very cutting because the result is much more general and generalizable than the joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. I didn't mention this in the review but the absorbption <i>was accounted for!</i>, which makes the result that much more impressive. Finally, the assumption that the scattering agents are isotropically distributed is good because it simplifies the reader's job; besides, this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate the anisotropy into the redistribution function and you're done! </p>
 
 <p>
 <b>This paper was published</b> in Feburary 2017 and has accrued 40 citations as of Feburary 2024. I sampled 15 of those citations and they were split about 50/50 between papers on stellar evolution and papers on neutron stars. Despite modern search tools, it's hard to evaluate the importance of this paper without being familiar with the field. <span class="peasant">(I didn't trouble myself to read those papers to find out how critical Poutanen's work was to them.)</span></p>
